--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -107,19 +107,20 @@ security:
         enabled: false
     oauth2:
         client:
-            access-token-uri: http://localhost:9080/auth/realms/jhipster/protocol/openid-connect/token
-            user-authorization-uri: http://localhost:9080/auth/realms/jhipster/protocol/openid-connect/auth
+            access-token-uri: http://localhost:9080/auth/realms/{realm}/protocol/openid-connect/token
+            user-authorization-uri: http://localhost:9080/auth/realms/{realm}/protocol/openid-connect/auth
             client-id: internal
             client-secret: internal
             authentication-scheme: header
             client-authentication-scheme: header
         resource:
             filter-order: 3
-            user-info-uri: http://localhost:9080/auth/realms/jhipster/protocol/openid-connect/userinfo
-            token-info-uri: http://localhost:9080/auth/realms/jhipster/protocol/openid-connect/token/introspect
+            user-info-uri: http://localhost:9080/auth/realms/{realm}/protocol/openid-connect/userinfo
+            token-info-uri: http://localhost:9080/auth/realms/{realm}/protocol/openid-connect/token/introspect
             prefer-token-info: false
-            jwt:
-                key-uri: http://localhost:9080/auth/realms/jhipster
+            #pas besoin de key-uri si on utilise user-info-uri et token-info-uri (cfr doc spring-boot security)
+            #jwt:
+            #    key-uri: http://localhost:9080/auth/realms/{realm}
 
 server:
     session:
